--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -32,3 +32,9 @@ license="${mod_license}"
     versionRange="[1.21-2.0-neoforge,)"
     ordering="AFTER"
     side="BOTH"
+[[dependencies.modularbees]]
+    modId="productivebees"
+    type="REQUIRED"
+    versionRange="*"
+    ordering="AFTER"
+    side="BOTH"
