--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ mod_license=LGPL-3.0
 mod_version=1.21.1-1.0-neoforge
 mod_group_id=com.glodblock.github.modularbees
 mod_authors=GlodBlock
-mod_description=Modular bees
+mod_description=Multiblock beehive for ProductiveBees
