--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation files("libs/productivelib.jar")
     implementation "mezz.jei:jei-1.21.1-neoforge:19.21.0.247"
     implementation "vazkii.patchouli:Patchouli:1.21-87-NEOFORGE"
+    compileOnly "mekanism:Mekanism:1.21.1-10.7.9.72"
     // runtime test
     runtimeOnly "curse.maven:jade-324717:5427817"
 }
