--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ loader_version_range=[1,)
 mod_id=modularbees
 mod_name=ModularBees
 mod_license=LGPL-3.0
-mod_version=1.21.1-1.0hf-neoforge
+mod_version=1.21.1-1.1-neoforge
 mod_group_id=com.glodblock.github.modularbees
 mod_authors=GlodBlock
 mod_description=Multiblock beehive for ProductiveBees
