add kjs version requirement

--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -38,3 +38,9 @@ license="${mod_license}"
     versionRange="*"
     ordering="AFTER"
     side="BOTH"
+[[dependencies.modularbees]]
+    modId="kubejs"
+    type="OPTIONAL"
+    versionRange="[2101.7.2,)"
+    ordering="NONE"
+    side="BOTH"
