--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ repositories {
 }
 
 dependencies {
-    implementation "curse.maven:glodium-957920:5614731"
+    implementation "io.github.glodblock:Glodium:1.21-2.2-neoforge"
     implementation "curse.maven:productivebees-377897:6698777"
     implementation files("libs/productivelib.jar")
     implementation "mezz.jei:jei-1.21.1-neoforge:19.21.0.247"
